# project2

./: README.md  first.dockerfile  pyproject.toml  requirements.txt
app/: main.py
app/core/: __init__.py
app/files/: employees.csv
app/models/: __init__.py
app/routes/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py  task_7.py  task_8.py
